crates/pg_syntax/tests/snapshots/postgres_regress/join@537.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into j3 values(1),(1);"
---
InsertStmt@0..29
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "j3"
  Whitespace@14..15 " "
  SelectStmt@15..27
    Values@15..21 "values"
    Ascii40@21..22 "("
    List@22..23
      AConst@22..23
        Iconst@22..23 "1"
    Ascii41@23..24 ")"
    Ascii44@24..25 ","
    Ascii40@25..26 "("
    List@26..27
      AConst@26..27
        Iconst@26..27 "1"
  Ascii41@27..28 ")"
  Ascii59@28..29 ";"

