crates/pg_syntax/tests/snapshots/postgres_regress/join@557.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into j1 values(1,1),(1,2);"
---
InsertStmt@0..33
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "j1"
  Whitespace@14..15 " "
  SelectStmt@15..31
    Values@15..21 "values"
    Ascii40@21..22 "("
    List@22..25
      AConst@22..23
        Iconst@22..23 "1"
      Ascii44@23..24 ","
      AConst@24..25
        Iconst@24..25 "1"
    Ascii41@25..26 ")"
    Ascii44@26..27 ","
    Ascii40@27..28 "("
    List@28..31
      AConst@28..29
        Iconst@28..29 "1"
      Ascii44@29..30 ","
      AConst@30..31
        Iconst@30..31 "2"
  Ascii41@31..32 ")"
  Ascii59@32..33 ";"

