crates/pg_syntax/tests/snapshots/postgres_regress/join@558.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into j2 values(1,1);"
---
InsertStmt@0..27
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "j2"
  Whitespace@14..15 " "
  SelectStmt@15..25
    Values@15..21 "values"
    Ascii40@21..22 "("
    List@22..25
      AConst@22..23
        Iconst@22..23 "1"
      Ascii44@23..24 ","
      AConst@24..25
        Iconst@24..25 "1"
  Ascii41@25..26 ")"
  Ascii59@26..27 ";"

