crates/pg_syntax/tests/snapshots/postgres_regress/join@568.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: set enable_hashjoin to 0;
---
VariableSetStmt@0..25
  Set@0..3 "set"
  Whitespace@3..4 " "
  Ident@4..19 "enable_hashjoin"
  Whitespace@19..20 " "
  To@20..22 "to"
  Whitespace@22..23 " "
  AConst@23..24
    Iconst@23..24 "0"
  Ascii59@24..25 ";"

