crates/pg_syntax/tests/snapshots/postgres_regress/join@569.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: set enable_sort to 0;
---
VariableSetStmt@0..21
  Set@0..3 "set"
  Whitespace@3..4 " "
  Ident@4..15 "enable_sort"
  Whitespace@15..16 " "
  To@16..18 "to"
  Whitespace@18..19 " "
  AConst@19..20
    Iconst@19..20 "0"
  Ascii59@20..21 ";"

