crates/pg_syntax/tests/snapshots/postgres_regress/join@57.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT *\n  FROM J1_TBL JOIN J2_TBL ON (J1_TBL.i = J2_TBL.k);"
---
SelectStmt@0..60
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Newline@8..9 "\n"
  Whitespace@9..11 "  "
  From@11..15 "FROM"
  Whitespace@15..16 " "
  JoinExpr@16..58
    RangeVar@16..22
      Ident@16..22 "J1_TBL"
    Whitespace@22..23 " "
    Join@23..27 "JOIN"
    Whitespace@27..28 " "
    RangeVar@28..34
      Ident@28..34 "J2_TBL"
    Whitespace@34..35 " "
    On@35..37 "ON"
    Whitespace@37..38 " "
    Ascii40@38..39 "("
    AExpr@39..58
      ColumnRef@39..47
        Ident@39..45 "J1_TBL"
        Ascii46@45..46 "."
        Ident@46..47 "i"
      Whitespace@47..48 " "
      Ascii61@48..49 "="
      Whitespace@49..50 " "
      ColumnRef@50..58
        Ident@50..56 "J2_TBL"
        Ascii46@56..57 "."
        Ident@57..58 "k"
  Ascii41@58..59 ")"
  Ascii59@59..60 ";"

