crates/pg_syntax/tests/snapshots/postgres_regress/join@575.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from j1\ninner join j2 on j1.id1 = j2.id1 and j1.id2 = j2.id2\nwhere j1.id1 % 1000 = 1 and j2.id1 % 1000 = 1;"
---
SelectStmt@0..116
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  JoinExpr@14..69
    RangeVar@14..16
      Ident@14..16 "j1"
    Newline@16..17 "\n"
    InnerP@17..22 "inner"
    Whitespace@22..23 " "
    Join@23..27 "join"
    Whitespace@27..28 " "
    RangeVar@28..30
      Ident@28..30 "j2"
    Whitespace@30..31 " "
    On@31..33 "on"
    Whitespace@33..34 " "
    BoolExpr@34..69
      AExpr@34..49
        ColumnRef@34..40
          Ident@34..36 "j1"
          Ascii46@36..37 "."
          Ident@37..40 "id1"
        Whitespace@40..41 " "
        Ascii61@41..42 "="
        Whitespace@42..43 " "
        ColumnRef@43..49
          Ident@43..45 "j2"
          Ascii46@45..46 "."
          Ident@46..49 "id1"
      Whitespace@49..50 " "
      And@50..53 "and"
      Whitespace@53..54 " "
      AExpr@54..69
        ColumnRef@54..60
          Ident@54..56 "j1"
          Ascii46@56..57 "."
          Ident@57..60 "id2"
        Whitespace@60..61 " "
        Ascii61@61..62 "="
        Whitespace@62..63 " "
        ColumnRef@63..69
          Ident@63..65 "j2"
          Ascii46@65..66 "."
          Ident@66..69 "id2"
  Newline@69..70 "\n"
  Where@70..75 "where"
  Whitespace@75..76 " "
  BoolExpr@76..115
    AExpr@76..93
      AExpr@76..89
        ColumnRef@76..82
          Ident@76..78 "j1"
          Ascii46@78..79 "."
          Ident@79..82 "id1"
        Whitespace@82..83 " "
        Ascii37@83..84 "%"
        Whitespace@84..85 " "
        AConst@85..89
          Iconst@85..89 "1000"
      Whitespace@89..90 " "
      Ascii61@90..91 "="
      Whitespace@91..92 " "
      AConst@92..93
        Iconst@92..93 "1"
    Whitespace@93..94 " "
    And@94..97 "and"
    Whitespace@97..98 " "
    AExpr@98..115
      AExpr@98..111
        ColumnRef@98..104
          Ident@98..100 "j2"
          Ascii46@100..101 "."
          Ident@101..104 "id1"
        Whitespace@104..105 " "
        Ascii37@105..106 "%"
        Whitespace@106..107 " "
        AConst@107..111
          Iconst@107..111 "1000"
      Whitespace@111..112 " "
      Ascii61@112..113 "="
      Whitespace@113..114 " "
      AConst@114..115
        Iconst@114..115 "1"
  Ascii59@115..116 ";"

